--- a/tailor-meta/Jenkinsfile.j2
+++ b/tailor-meta/Jenkinsfile.j2
@@ -1,3 +1,8 @@
 #!/usr/bin/env groovy
 @Library('tailor-meta@{{ meta_ref }}')_
-tailorTestPipeline(distribution: '{{ rosdistro }}', release_track: '{{ release_track }}', flavour: '{{ flavour }}')
+tailorTestPipeline(
+  rosdistro: '{{ rosdistro }}',
+  release_track: '{{ release_track }}',
+  distributions: ['{{ distributions | join("', '") }}'],
+  flavour: '{{ flavour }}'
+)
