Make test pipeline declarative

--- a/tailor_meta/Jenkinsfile.j2
+++ b/tailor_meta/Jenkinsfile.j2
@@ -4,5 +4,6 @@ tailorTestPipeline(
   rosdistro: '{{ rosdistro }}',
   release_track: '{{ release_track }}',
   distributions: ['{{ distributions | join("', '") }}'],
-  flavour: '{{ flavour }}'
+  flavour: '{{ flavour }}',
+  meta_ref: '{{ meta_ref }}'
 )
