--- a/tailor_meta/debian_templates/rules.j2
+++ b/tailor_meta/debian_templates/rules.j2
@@ -25,6 +25,7 @@ override_dh_auto_install:
 		source {{ src_dir }}/{{ distro_name }}_install/setup.bash; \
 	fi; \
 	export ROS_DISTRO_OVERRIDE={{ organization }}-{{ release_label }} && \
+	export MAKEFLAGS="-j2" && \
 	env && \
 	TERM=dumb colcon build \
 		--packages-select {{ package_name }} \
