--- a/tailor_meta/debian_templates/rules.j2
+++ b/tailor_meta/debian_templates/rules.j2
@@ -39,6 +39,7 @@ override_dh_auto_install:
 			-DCMAKE_CXX_EXTENSIONS='ON' \
 			-DCMAKE_CXX_COMPILER_LAUNCHER=ccache \
 			-DPYTHON_EXECUTABLE=/usr/bin/python{{ python_version }} \
+			-DCMAKE_VERBOSE_MAKEFILE=ON \
 		--ament-cmake-args \
 			-DBUILD_TESTING=OFF \
 		--catkin-cmake-args \
